# cognous-agent-action-manifest

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: concepts.md  examples.md  integration_with_agent_control_plane.md  manifest_format.md  roadmap.md
examples/: customer_service_agent.manifest.json  finance_workflow_agent.manifest.json  internal_research_agent.manifest.json  procurement_agent.manifest.json
schemas/: agent_action_manifest.schema.json  authority_requirement.schema.json  payload_policy.schema.json  redaction_hint.schema.json  reliance_requirement.schema.json  review_requirement.schema.json  tool_action.schema.json  validation_report.schema.json
src/agent_action_manifest/: __init__.py  cli.py  loader.py  models.py  validator.py
src/agent_action_manifest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_cli.py  test_examples.py  test_loader.py  test_models.py  test_validator.py
